# Tokyo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: accounts.yaml  alerting.yaml  risk_limits.yaml  strategies.yaml  symbols.yaml
config/adapters/: data_ccxt.yaml  data_dukascopy.yaml  data_oandapy.yaml  data_webscraping.yaml  data_yfinance.yaml  market_paper.yaml
config/examples/: order_intent_market.json
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
tests/contract/: test_contract_schemas.py
tests/integration/: test_api_integration.py  test_event_bus_integration.py  test_storage_integration.py
tests/smoke/: test_paper_flow.py
tests/unit/: test_decimal_contracts.py  test_order_state_machine.py  test_paper_execution.py
tokyo/: __init__.py
tokyo/apps/api/: main.py  runtime.py  websocket.py
tokyo/apps/api/routes/: adapters.py  data.py  health.py  orders.py  reports.py  risk.py  strategies.py  symbols.py  system.py
tokyo/apps/api/utils/: app_factory.py  dependencies.py  error_handlers.py  smoke_paper.py
tokyo/apps/data_worker/: __init__.py  main.py  run_backfill.py
tokyo/apps/execution_worker/: __init__.py  main.py
tokyo/apps/scheduler/: main.py
tokyo/apps/supervisor/: __init__.py  main.py
