[project]
name = "tokyo"
version = "0.1.0"
description = "API-first paper trading and financial data analysis platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "pyyaml>=6.0.2",
  "redis>=5.0.7",
  "sqlalchemy[asyncio]>=2.0.31",
  "uvicorn[standard]>=0.30.1",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.20.0",
  "mypy>=1.10.1",
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tokyo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
